# news-places-weather-dashboard

./: README.md  env.sample  pyproject.toml
News_Places_Weather_Dashboard/: .dockerignore  Dockerfile  Makefile  compose.yml
News_Places_Weather_Dashboard/config/: celery.py  settings.py  tasks.py  urls.py
News_Places_Weather_Dashboard/news/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
News_Places_Weather_Dashboard/news/migrations/: 0002_alter_news_options_alter_news_main_image_and_more.py
News_Places_Weather_Dashboard/place/: admin.py  models.py  serializers.py  services.py  urls.py  views.py  widgets.py
News_Places_Weather_Dashboard/place/migrations/: 0002_alter_place_options_alter_place_table.py  0003_alter_place_latitude_alter_place_longitude.py
News_Places_Weather_Dashboard/place/templates/geomap/: add_form.html  change_form.html  changelist.html
News_Places_Weather_Dashboard/place/templates/geomap/osm/: add.html  base.html  common.html  drag.html  popup.html
News_Places_Weather_Dashboard/swagger/: urls.py
News_Places_Weather_Dashboard/weather_summary_/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
